x86_32 build failures after JDK-8214074 (Ghash optimization using AVX instructions)

XMLWordPrintable

    • b24
    • x86

        x86_32:

        /home/shade/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86_aes.cpp:34:75: error: no 'void MacroAssembler::schoolbookAAD(int, Register, XMMRegister, XMMRegister, XMMRegister, XMMRegister, XMMRegister)' member function declared in class 'MacroAssembler'
             XMMRegister tmp0, XMMRegister tmp1, XMMRegister tmp2, XMMRegister tmp3) {
                                                                                   ^
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86_aes.cpp:48:63: error: no 'void MacroAssembler::gfmul(XMMRegister, XMMRegister)' member function declared in class 'MacroAssembler'
         void MacroAssembler::gfmul(XMMRegister tmp0, XMMRegister state) {
                                                                       ^
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86_aes.cpp:94:58: error: no 'void MacroAssembler::generateHtbl_one_block(Register)' member function declared in class 'MacroAssembler'
         void MacroAssembler::generateHtbl_one_block(Register htbl) {
                                                                  ^
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86_aes.cpp:126:61: error: no 'void MacroAssembler::generateHtbl_eight_blocks(Register)' member function declared in class 'MacroAssembler'
         void MacroAssembler::generateHtbl_eight_blocks(Register htbl) {
                                                                     ^
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86_aes.cpp:157:41: error: no 'void MacroAssembler::avx_ghash(Register, Register, Register, Register)' member function declared in class 'MacroAssembler'
             Register input_data, Register blocks) {

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: