8215354: x86_32 build failures after JDK-8214074 (Ghash optimization using AVX instructions)

Reviewed-by: thartmann